Nepal flag and overflow fix

--- a/src/pages/Country/components/CountryMain.module.scss
+++ b/src/pages/Country/components/CountryMain.module.scss
@@ -1,4 +1,4 @@
-.flexMain {
+.main {
     padding: 3rem 0;
     box-sizing: border-box;
     width: 100%;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 60rem) {
-    .flexMain {
+    .main {
         grid-template-columns: repeat(1, minmax(min-content, 1fr));
     }
 }
