--- a/src/pages/Country/components/country-details/CountryInfoGrid.module.scss
+++ b/src/pages/Country/components/country-details/CountryInfoGrid.module.scss
@@ -1,15 +1,15 @@
 .infoGrid {
-    width: fit-content;
+    width: 100%;
     max-width: 560px;
-    flex: 1;
     text-align: left;
     color: var(--text);
 
     display: grid;
     justify-self: center;
     justify-items: start;
+    align-self: center;
     gap: .5rem 2%;
-    grid-template-columns: repeat(2, minmax(15em,1fr));
+    grid-template-columns: repeat(2, minmax(min-content, 1fr));
     grid-template-areas:
         "name ."
         "info1 info2"
